Docs dark mode fix v2 (#11782)
* fix docs dark mode

* tweak code token color

* dynamic color for homepage elements

* swap primary/secondary for dark mode

* add dark variant of header background

--- a/docs/.vuepress/styles/colors.styl
+++ b/docs/.vuepress/styles/colors.styl
@@ -53,13 +53,13 @@
   --foreground-subdued: #697a83;
   --foreground-inverted: #263238;
 
-  --primary-light: #ddddff;
-  --primary: #6644ff;
-  --primary-dark: #7760ff;
+  --primary-light: #ffeeff;
+  --primary: #ff99dd;
+  --primary-dark: #ffaaee;
 
-  --secondary-light: #ffeeff;
-  --secondary: #ff99dd;
-  --secondary-dark: #ffaaee;
+  --secondary-light: #ddddff;
+  --secondary: #6644ff;
+  --secondary-dark: #7760ff;
 
   --success-light: #294a4b;
   --success: #00c897;
